Bug #13009 No gaps allowed in node id number sequence
Submitted: 6 Sep 2005 12:53 Modified: 13 Oct 2005 13:27
Reporter: Hartmut Holzgraefe
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1.12, 5.0bk OS:Linux (linux)
Assigned to: Tomas Ulin Target Version:

[6 Sep 2005 12:53] Hartmut Holzgraefe
Description:
When giving the data nodes the IDs 1,2,4,5 (leaving out 3) the error message

    Hostname required on nodeid 3 since it will act as server.

is thrown and the management daemon refuses to start.

How to repeat:
start ndb_mgmd with the attached config file
[6 Sep 2005 20:43] Jorge del Conde
Tested using a recent 5.0bk clone
[6 Sep 2005 21:39] Tomas Ulin
workaround for this is to give _all_ nodes an id, also the mysqld.

Please make sure to give the mysqld's a higher numner than any of the ndbd's and
ndb_mgmd's
[11 Oct 2005 15:51] Tomas Ulin
Will not change in 4.1,

but in 5.0 will add "smarter" automatic node allocation.

Logic being always do automatic node allocation starting from latest used id in the
config file

Will also add so that api/mysqld node are always "clients"
[12 Oct 2005 12:20] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/30951
[13 Oct 2005 8:37] Tomas Ulin
fixed in 5.0.15, not in 4.1
[13 Oct 2005 13:27] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented in 5.0.15 changelog. Closed.